fix for navbar on mobile view

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -25,6 +25,7 @@ a {
 .active {
   border-bottom: 2px solid white;
   font-weight: 600;
+  width: fit-content;
 }
 
 .navbar {
