--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -26,4 +26,5 @@ a {
 .active{
   border-bottom: 2px solid white;
   font-weight: 600;
+  width: fit-content;
 }
